--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,6 +8,12 @@
     tools:alpha="0.8"
     tools:context="com.example.pooya.popularmovies.DetailActivity">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+    </android.support.v4.view.ViewPager>
+
 
     <ProgressBar
         android:id="@+id/pb_loading_indicator"
@@ -16,8 +22,11 @@
         android:visibility="invisible" />
 
     <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/titles"
@@ -37,16 +46,35 @@
             android:layout_width="114dp"
             android:layout_height="101dp"
             android:layout_margin="8dp"
+            android:clickable="true"
             android:src="@mipmap/ic_launcher"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="16dp" />
     </LinearLayout>
 
+
+    <TextView
+        android:id="@+id/year"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="movie year"
+        android:textColor="#FFF"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="rating"
+        android:textColor="#FFF"
+        android:textSize="15sp" />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp">
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,22 +85,7 @@
             tools:layout_editor_absoluteX="26dp"
             tools:layout_editor_absoluteY="132dp">
 
-            <TextView
-                android:id="@+id/year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="movie year"
-                android:textColor="#FFF"
-                android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="rating"
-                android:textColor="#FFF"
-                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/detail"
