--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#37474f</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#00796b</color>
+    <color name="white">#FFF</color>
 </resources>
