--- a/app/src/main/res/layout/fragmenttab1.xml
+++ b/app/src/main/res/layout/fragmenttab1.xml
@@ -4,11 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_tab1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/Fragment1" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
